# opengl

./: CMakeLists.txt  main.cpp
Dependencies/: CMakeLists.txt
Dependencies/GLEW/: CMakeLists.txt
Dependencies/GLEW/src/: glew.c  glewinfo.c
Dependencies/GLFW/: CMakeLists.txt
cmake/: macros.cmake
